--- a/index.html
+++ b/index.html
@@ -7,123 +7,68 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Kosugi|Share+Tech" rel="stylesheet">
-
-
-
 </head>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
       integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 <body>
 <div id=”skrollr-body”>
-<p id="sv" style="position: fixed; top: 60px; right: 20px;">スクロール値：0</p>
-
 <header class="header" data-20="opacity:1;top:3%;transform:rotate(0deg);transform-origin:0 0;" data-3000="opacity:0;top:-10%;transform:rotate(-90deg);">
 
-    <p class="site-title-sub">MyPoZi_home</p>
+    <p class="site-title-sub">MyPoZi's_home</p>
     <h1 class="site-title">"Hello World"</h1>
     <P class="site-description">You can stay as long as you like</P>
     <P class="site-description">If you click here ...?</P>
     <P class="site-description">You should not click too much</P>
-    <h4 class="site-description">Please scrolling!!!</h4>
+    <h4 class="site-description">Please scroll !!!</h4>
     <p class="site-description">▽</p>
 
 </header>
-<!--<nav>-->
-    <!--<ul class="navbar">-->
-        <!--<li><a href="">Profile</a></li>-->
-        <!--<li><a href="">Blog</a></li>-->
-        <!--<li><a href="">Portfolios</a></li>-->
-        <!--<li><a href="">Skills</a></li>-->
-    <!--</ul>-->
-<!--</nav>-->
-<section class="about" data-1000="transform:translateX(2000px);" data-2000="transform:translateX(0px);" data-2500="position: fixed;top: 0;left: 0;right: 0;" data-3000="transform:translateY(0%);" data-4000="transform:translateY(-100%);">
+<section class="about" data-1000="transform:translateX(3000px);" data-2500="transform:translateX(0px);" data-5000="position: fixed;top: 0;left: 0;right: 0;" data-6000="transform:translateY(0%);" data-7000="transform:translateY(-100%);">
 
     <h2 class="heading">ABOUT</h2>
     <div class="wrap">
         <div class="icon">
             <img src="images/DSC_1789.jpg" alt="MyPoZi">
         </div>
-        <p class="about-text" data-1000="transform:translateX(1000px);" data-1100="transform:translateX(0px);">名前: MyPoZi</p>
-        <p class="about-text" data-1100="transform:translateX(1000px);" data-1200="transform:translateX(0px);">年齢: 20</p>
-        <p class="about-text" data-1200="transform:translateX(1000px);" data-1300="transform:translateX(0px);">職業: 大学生</p>
-        <p class="about-text" data-1300="transform:translateX(1000px);" data-1400="transform:translateX(0px);">学科: 情報科</p>
-        <p class="about-text" data-1400="transform:translateX(1000px);" data-1500="transform:translateX(0px);">学年: 2</p>
-        <p class="about-text" data-1500="transform:translateX(1000px);" data-1600="transform:translateX(0px);">言語: PHP, Python etc...</p>
-        <p class="about-text" data-1600="transform:translateX(1000px);" data-1700="transform:translateX(0px);">趣味: 旅行 カメラ ピアノ プログラミング ゲーム</p>
+        <p class="about-text" data-2700="transform:translateX(1000px);" data-3000="transform:translateX(0px);"><strong>名前: MyPoZi</strong></p>
+        <p class="about-text" data-3000="transform:translateX(1000px);" data-3300="transform:translateX(0px);">年齢: 20</p>
+        <p class="about-text" data-3300="transform:translateX(1000px);" data-3600="transform:translateX(0px);">職業: 大学生</p>
+        <p class="about-text" data-3600="transform:translateX(1000px);" data-3900="transform:translateX(0px);">学科: 情報科</p>
+        <p class="about-text" data-3900="transform:translateX(1000px);" data-4200="transform:translateX(0px);">学年: 2</p>
+        <p class="about-text" data-4200="transform:translateX(1000px);" data-4500="transform:translateX(0px);">好きな言語: PHP, Python </p>
+        <p class="about-text" data-4500="transform:translateX(1000px);" data-4800="transform:translateX(0px);">趣味: 旅行 カメラ ピアノ プログラミング ゲーム</p>
     </div>
 </section>
-<section class="works" data-4000="transform:translateX(2000px);" data-4500="transform:translateX(0px);" data-5000="position: fixed;top: 0;left: 0;right: 0;" data-7000="transform:translateY(0%);" data-8000="transform:translateY(-100%);">
+<section class="works" data-7500="transform:translateX(3000px);" data-8500="transform:translateX(0px);" data-10000="position: fixed;top: 0;left: 0;right: 0;" data-12000="transform:translateY(0%);" data-14000="transform:translateY(-100%);">
     <h2 class="heading heading-works" >WORKS</h2>
     <div class="works-wrapper">
-        <div class="square1" data-5000="opacity:0;transform:rotate(-720deg); top:100%; right:100%;" data-6000="opacity:1;transform:rotate(0deg);transform-origin:50 50;top:10%; right: 100%;" ><h3>何</h3></div>
-        <div class="square2" data-5000="opacity:0;transform:rotate(-720deg); top:100%; right:100%;" data-6000="opacity:1;transform:rotate(0deg);transform-origin:50 50;top:10%; right: 100%;" ><h3>も</h3></div>
-        <div class="square3" data-5000="opacity:0;transform:rotate(-720deg); top:500%; left:10%;" data-6000="opacity:1;transform:rotate(0deg);transform-origin:50 50;top:10%; right: 100%;" ><h3>な</h3></div>
-        <div class="square4" data-5000="opacity:0;transform:rotate(-720deg); top:500%; left:10%;" data-6000="opacity:1;transform:rotate(0deg);transform-origin:50 50;top:10%; right: 100%;" ><h3>い</h3></div>
+        <div class="square1" data-9000="opacity:0;transform:rotate(-720deg); top:100%; right:100%;" data-10000="opacity:1;transform:rotate(0deg);transform-origin:50 50;top:10%; right: 100%;" ><h3>何</h3></div>
+        <div class="square2" data-9000="opacity:0;transform:rotate(-720deg); top:100%; right:100%;" data-10000="opacity:1;transform:rotate(0deg);transform-origin:50 50;top:10%; right: 100%;" ><h3>も</h3></div>
+        <div class="square3" data-9000="opacity:0;transform:rotate(-720deg); top:500%; left:10%;" data-10000="opacity:1;transform:rotate(0deg);transform-origin:50 50;top:10%; right: 100%;" ><h3>な</h3></div>
+        <div class="square4" data-9000="opacity:0;transform:rotate(-720deg); top:500%; left:10%;" data-10000="opacity:1;transform:rotate(0deg);transform-origin:50 50;top:10%; right: 100%;" ><h3>い</h3></div>
     </div>
 </section>
-    <section class="curtain1" data-6500="transform:translateX(-2000px);" data-6800="transform:translateX(0px);" data-7500="position: fixed;top: 0;left: 0;right: 0;">
-    <section class="curtain2" data-6550="transform:translateX(-2000px);" data-6900="transform:translateX(0px);" data-7600="position: fixed;top: 0;left: 0;right: 0;">
-    <section class="curtain3" data-6600="transform:translateX(-2000px);" data-7000="transform:translateX(0px);" data-7600="position: fixed;top: 0;left: 0;right: 0;">
-    <section class="curtain4" data-6650="transform:translateX(-2000px);" data-7100="transform:translateX(0px);" data-7600="position: fixed;top: 0;left: 0;right: 0;">
+    <section class="curtain1" data-11000="transform:translateX(-3000px);" data-11500="transform:translateX(0px);" data-15000="position: fixed;top: 0;left: 0;right: 0;">
+    <section class="curtain2" data-11250="transform:translateX(-3000px);" data-11750="transform:translateX(0px);" data-15000="position: fixed;top: 0;left: 0;right: 0;">
+    <section class="curtain3" data-11500="transform:translateX(-3000px);" data-12000="transform:translateX(0px);" data-15000="position: fixed;top: 0;left: 0;right: 0;">
+    <section class="curtain4" data-11750="transform:translateX(-3000px);" data-12250="transform:translateX(0px);" data-15000="position: fixed;top: 0;left: 0;right: 0;">
     </section>
     </section>
     </section>
     </section>
-<!--<section class="skills">-->
-    <!--<h2 class="heading">SKILLS</h2>-->
-
-    <!--<div class="skills-wrapper">-->
-        <!--<ul>-->
-            <!--<li>-->
-                <!--<div class="skill-box">-->
-                    <!--<i class="skill-icon fas fa-thumbs-up"></i>-->
-                    <!--<i class="fas fa-shield-check"></i>-->
-                    <!--<div class="skill-title">行動力</div>-->
-                    <!--<p class="skill-text">-->
-                        <!--とにかくやりたいことがあったら行動します。<br>-->
-                        <!--経験が大事だと考えています。<br>-->
-                        <!--迷ったら行動しましょう。-->
-                    <!--</p>-->
-                <!--</div>-->
-            <!--</li>-->
-            <!--<li>-->
-                <!--<div class="skill-box">-->
-                    <!--<i class="skill-icon fas fa-code"></i>-->
-                    <!--<div class="skill-title">プログラミング</div>-->
-                    <!--<p class="skill-text">-->
-                        <!--プログラミングが好きです。<br>-->
-                        <!--基本毎日コード書いています。<br>-->
-                        <!--最新技術を常に習得する習慣がついています。-->
-                    <!--</p>-->
-                <!--</div>-->
-            <!--</li>-->
-            <!--<li>-->
-                <!--<div class="skill-box">-->
-                    <!--<i class="skill-icon fas fa-lock"></i>-->
-                    <!--<div class="skill-title">セキュリティ</div>-->
-                    <!--<p class="skill-text">-->
-                        <!--セキュアプログラミングするために攻撃手法を勉強しています。<br>-->
-                        <!--それにより対処する方法を知ることが出来ます。-->
-                    <!--</p>-->
-                <!--</div>-->
-            <!--</li>-->
-        <!--</ul>-->
-    <!--</div>-->
-<!--</section>-->
-<section class="contact">
+<section class="contact " data-13000="transform:scale(0) rotate(0deg);" data-14000="transform:scale(1) rotate(1440deg);opacity:1;" data-15000="position: fixed;top: 0;left: 0;right: 0;" data-15250="color[swing]:rgb(0,0,0);" data-15500="color:rgb(255,255,0);"data-16000="top[cubic]:100%;border-radius[cubic]:0em;background:rgb(51,51,51);border-width:0px;">
     <h2 class="heading">CONTACT</h2>
-
     <div>
         <ul>
-
             <li><a href="https://twitter.com/MyPoZi555"><i class="contact-icon fab fa-twitter"></i></a></li>
             <li><a href="https://github.com/MyPoZi"><i class="contact-icon fab fa-github"></i></a></li>
         </ul>
     </div>
+    <footer class="footer">
+        <p style="color: #000000">© MyPoZi 2018</p>
+    </footer>
 </section>
-<footer class="footer">
-    © MyPoZi 2018
-</footer>
+
 <div id="particles-js"></div>
 <script src="js/lib/particles.js"></script>
 <script src="js/set.js"></script>
@@ -132,13 +77,6 @@
 <script type="text/javascript" src="js/lib/skrollr.js"></script>
 <script>
     var s = skrollr.init();
-</script>
-<script type="text/javascript">
-    $(document).ready(function() {
-        $(window).scroll(function() {
-            $('#sv').text('スクロール値：' + $(this).scrollTop());
-        });
-    });
 </script>
 </div>
 </body>
