スマホ対応

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale =1.0"> <!--簡単スマホ対応!-->
-    <title>MyPoZi_home</title>
+    <title>MyPoZi's_home</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Kosugi|Share+Tech" rel="stylesheet">
@@ -12,68 +12,101 @@
       integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 <body>
 <div id=”skrollr-body”>
-<header class="header" data-20="opacity:1;top:3%;transform:rotate(0deg);transform-origin:0 0;" data-1500="opacity:0;top:-10%;transform:rotate(-90deg);">
-    <div id="particles-js"></div>
-    <p class="site-title-sub">MyPoZi's_home</p>
-    <h1 class="site-title">"Hello World"</h1>
-    <P class="site-description">You can stay as long as you like</P>
-    <P class="site-description">If you click here ...?</P>
-    <P class="site-description">You should not click too much</P>
-    <h4 class="site-description">Please scroll !!!</h4>
-    <p class="site-description">▽</p>
-</header>
-<section class="about" data-1000="transform:translateX(3000px);" data-2500="transform:translateX(0px);" data-5000="position: fixed;top: 0;left: 0;right: 0;" data-6000="transform:translateY(0%);" data-7000="transform:translateY(-100%);">
-    <h2 class="heading">ABOUT</h2>
-    <div class="wrap">
-        <div class="icon">
-            <img src="images/DSC_1789.jpg" alt="MyPoZi">
+    <header class="header" data-20="opacity:1;top:3%;transform:rotate(0deg);transform-origin:0 0;"
+            data-1500="opacity:0;top:-10%;transform:rotate(-90deg);">
+        <p class="site-title-sub">MyPoZi's_home</p>
+        <h1 class="site-title">"Hello World"</h1>
+        <P class="site-description">You can stay as long as you like</P>
+        <P class="site-description">If you click here ...?</P>
+        <P class="site-description">You should not click too much</P>
+        <h4 class="site-description">Please scroll !!!</h4>
+        <p class="site-description">▽</p>
+        <div id="particles-js"></div>
+    </header>
+    <section class="about" data-1000="transform:translateX(3000px);" data-2500="transform:translateX(0px);"
+             data-5000="position: fixed;top: 0;left: 0;right: 0;" data-6000="transform:translateY(0%);"
+             data-7000="transform:translateY(-100%);">
+        <h2 class="heading">ABOUT</h2>
+        <div class="wrap">
+            <div class="icon">
+                <img src="images/DSC_1789.jpg" alt="MyPoZi">
+            </div>
+            <div class="about-text">
+            <p data-2700="transform:translateX(1000px);" data-3000="transform:translateX(0px);">
+                <strong>名前: MyPoZi</strong></p>
+            <p data-3000="transform:translateX(1000px);" data-3300="transform:translateX(0px);">年齢:
+                20</p>
+            <p data-3300="transform:translateX(1000px);" data-3600="transform:translateX(0px);">職業:
+                大学生</p>
+            <p data-3600="transform:translateX(1000px);" data-3900="transform:translateX(0px);">学科:
+                情報科</p>
+            <p data-3900="transform:translateX(1000px);" data-4200="transform:translateX(0px);">学年:
+                2</p>
+            <p data-4200="transform:translateX(1000px);" data-4500="transform:translateX(0px);">
+                好きな言語: PHP, Python </p>
+            <p data-4500="transform:translateX(1000px);" data-4800="transform:translateX(0px);">趣味:
+                旅行,カメラ,ピアノ,プログラミング</p>
+                <p> </p>
+                <p> </p>
+            </div>
         </div>
-        <p class="about-text" data-2700="transform:translateX(1000px);" data-3000="transform:translateX(0px);"><strong>名前: MyPoZi</strong></p>
-        <p class="about-text" data-3000="transform:translateX(1000px);" data-3300="transform:translateX(0px);">年齢: 20</p>
-        <p class="about-text" data-3300="transform:translateX(1000px);" data-3600="transform:translateX(0px);">職業: 大学生</p>
-        <p class="about-text" data-3600="transform:translateX(1000px);" data-3900="transform:translateX(0px);">学科: 情報科</p>
-        <p class="about-text" data-3900="transform:translateX(1000px);" data-4200="transform:translateX(0px);">学年: 2</p>
-        <p class="about-text" data-4200="transform:translateX(1000px);" data-4500="transform:translateX(0px);">好きな言語: PHP, Python </p>
-        <p class="about-text" data-4500="transform:translateX(1000px);" data-4800="transform:translateX(0px);">趣味: 旅行 カメラ ピアノ プログラミング ゲーム</p>
-    </div>
-</section>
-<section class="works" data-7500="transform:translateX(3000px);" data-8500="transform:translateX(0px);" data-10000="position: fixed;top: 0;left: 0;right: 0;" data-12000="transform:translateY(0%);" data-14000="transform:translateY(-100%);">
-    <h2 class="heading heading-works" >WORKS</h2>
-    <div class="works-wrapper">
-        <div class="square1" data-9000="opacity:0;transform:rotate(-720deg); top:100%; right:100%;" data-10000="opacity:1;transform:rotate(0deg);transform-origin:50 50;top:10%; right: 100%;" ><h3>何</h3></div>
-        <div class="square2" data-9000="opacity:0;transform:rotate(-720deg); top:100%; right:100%;" data-10000="opacity:1;transform:rotate(0deg);transform-origin:50 50;top:10%; right: 100%;" ><h3>も</h3></div>
-        <div class="square3" data-9000="opacity:0;transform:rotate(-720deg); top:500%; left:10%;" data-10000="opacity:1;transform:rotate(0deg);transform-origin:50 50;top:10%; right: 100%;" ><h3>な</h3></div>
-        <div class="square4" data-9000="opacity:0;transform:rotate(-720deg); top:500%; left:10%;" data-10000="opacity:1;transform:rotate(0deg);transform-origin:50 50;top:10%; right: 100%;" ><h3>い</h3></div>
-    </div>
-</section>
-    <section class="curtain1" data-11000="transform:translateX(-3000px);" data-11500="transform:translateX(0px);" data-15000="position: fixed;top: 0;left: 0;right: 0;">
-    <section class="curtain2" data-11250="transform:translateX(-3000px);" data-11750="transform:translateX(0px);" data-15000="position: fixed;top: 0;left: 0;right: 0;">
-    <section class="curtain3" data-11500="transform:translateX(-3000px);" data-12000="transform:translateX(0px);" data-15000="position: fixed;top: 0;left: 0;right: 0;">
-    <section class="curtain4" data-11750="transform:translateX(-3000px);" data-12250="transform:translateX(0px);" data-15000="position: fixed;top: 0;left: 0;right: 0;">
     </section>
+    <section class="works" data-7500="transform:translateX(3000px);" data-8500="transform:translateX(0px);"
+             data-10000="position: fixed;top: 0;left: 0;right: 0;" data-12100="transform:translateY(0%);"
+             data-13000="transform:translateY(-100%);">
+        <h2 class="heading heading-works">WORKS</h2>
+        <div class="works-wrapper">
+            <div class="square1" data-9000="opacity:0;transform:rotate(-720deg); top:100%; right:100%;"
+                 data-10000="opacity:1;transform:rotate(0deg);transform-origin:50 50;top:10%; right: 100%;"><h3>何</h3>
+            </div>
+            <div class="square2" data-9000="opacity:0;transform:rotate(-720deg); top:100%; right:100%;"
+                 data-10000="opacity:1;transform:rotate(0deg);transform-origin:50 50;top:10%; right: 100%;"><h3>も</h3>
+            </div>
+            <div class="square3" data-9000="opacity:0;transform:rotate(-720deg); top:500%; left:10%;"
+                 data-10000="opacity:1;transform:rotate(0deg);transform-origin:50 50;top:10%; right: 100%;"><h3>な</h3>
+            </div>
+            <div class="square4" data-9000="opacity:0;transform:rotate(-720deg); top:500%; left:10%;"
+                 data-10000="opacity:1;transform:rotate(0deg);transform-origin:50 50;top:10%; right: 100%;"><h3>い</h3>
+            </div>
+        </div>
     </section>
+    <section class="curtain1" data-10000="transform:translateX(-3000px);" data-12000="transform:translateX(0px);"
+             data-12300="position: fixed;top: 0;left: 0;right: 0;">
+        <section class="curtain2" data-10300="transform:translateX(-3000px);" data-12000="transform:translateX(0px);"
+                 data-12300="position: fixed;top: 0;left: 0;right: 0;">
+            <section class="curtain3" data-10700="transform:translateX(-3000px);"
+                     data-12000="transform:translateX(0px);" data-12300="position: fixed;top: 0;left: 0;right: 0;">
+                <section class="curtain4" data-10900="transform:translateX(-3000px);"
+                         data-12000="transform:translateX(0px);" data-12300="position: fixed;top: 0;left: 0;right: 0;">
+                </section>
+            </section>
+        </section>
     </section>
+    <section class="contact " data-12500="transform:scale(0) rotate(0deg);"
+             data-13200="transform:scale(1) rotate(1440deg);opacity:1;"
+             data-13400="position: fixed;top: 0;left: 0;right: 0;" data-13650="color[swing]:rgb(0,0,0);"
+             data-14000="color:rgb(255,255,0);"
+             data-14500="top[cubic]:100%;border-radius[cubic]:0em;background:rgb(51,51,51);border-width:0px;">
+        <h2 class="heading">CONTACT</h2>
+        <div>
+            <ul class="icon-ul">
+                <li><a href="https://twitter.com/MyPoZi555"><i class="contact-icon fab fa-twitter"></i></a></li>
+                <li><a href="https://github.com/MyPoZi"><i class="contact-icon fab fa-github"></i></a></li>
+            </ul>
+        </div>
+        <footer class="footer">
+            <p style="color: #000000">© MyPoZi 2018</p>
+        </footer>
     </section>
-<section class="contact " data-13000="transform:scale(0) rotate(0deg);" data-14000="transform:scale(1) rotate(1440deg);opacity:1;" data-14500="position: fixed;top: 0;left: 0;right: 0;" data-14750="color[swing]:rgb(0,0,0);" data-15250="color:rgb(255,255,0);" data-15500="top[cubic]:100%;border-radius[cubic]:0em;background:rgb(51,51,51);border-width:0px;">
-    <h2 class="heading">CONTACT</h2>
-    <div>
-        <ul>
-            <li><a href="https://twitter.com/MyPoZi555"><i class="contact-icon fab fa-twitter"></i></a></li>
-            <li><a href="https://github.com/MyPoZi"><i class="contact-icon fab fa-github"></i></a></li>
-        </ul>
-    </div>
-    <footer class="footer">
-        <p style="color: #000000">© MyPoZi 2018</p>
-    </footer>
-</section>
-<script src="js/lib/particles.js"></script>
-<script src="js/set.js"></script>
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script type="text/javascript" src="js/script.js"></script>
-<script type="text/javascript" src="js/lib/skrollr.js"></script>
-<script>
-    var s = skrollr.init();
-</script>
+    <script src="js/lib/particles.js"></script>
+    <script src="js/set.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="js/lib/skrollr.js"></script>
+
+    <script>
+        var s = skrollr.init();
+    </script>
 </div>
 </body>
 </html>
